fix clear btn alignment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,6 +27,7 @@ body {
 
   .price {
     display: flex;
+    align-items: baseline;
   }
 }
 
